Fix [#28772] Filepaths are not remmaped after making a library item local Added a visitor function to simplify processing of file paths that are attached to IDs. This is used for images, and could be used for other ID types in future. Code reviewed by ideasman_42.

git-svn-id: https://svn.blender.org/svnroot/bf-blender/trunk@41292 954f8c5b-7b00-dc11-b283-0030488c597c