blender/source/blender/blenkernel/intern/mball.c
@@ -156,9 +156,7 @@ void make_local_mball(MetaBall *mb)
 	
 	if(mb->id.lib==NULL) return;
 	if(mb->id.us==1) {
-		mb->id.lib= NULL;
-		mb->id.flag= LIB_LOCAL;
-		new_id(&bmain->mball, (ID *)mb, NULL);
+		id_clear_lib_data(&bmain->mball, (ID *)mb);
 		extern_local_mball(mb);
 		
 		return;
@@ -172,10 +170,7 @@ void make_local_mball(MetaBall *mb)
 	}
 	
 	if(local && lib==0) {
-		mb->id.lib= NULL;
-		mb->id.flag= LIB_LOCAL;
-
-		new_id(&bmain->mball, (ID *)mb, NULL);
+		id_clear_lib_data(&bmain->mball, (ID *)mb);
 		extern_local_mball(mb);
 	}
 	else if(local && lib) {
