blender/source/blender/blenkernel/intern/particle.c
@@ -3610,9 +3610,7 @@ void make_local_particlesettings(ParticleSettings *part)
 	
 	if(part->id.lib==0) return;
 	if(part->id.us==1) {
-		part->id.lib= 0;
-		part->id.flag= LIB_LOCAL;
-		new_id(&bmain->particle, (ID *)part, 0);
+		id_clear_lib_data(&bmain->particle, (ID *)part);
 		expand_local_particlesettings(part);
 		return;
 	}
@@ -3629,9 +3627,7 @@ void make_local_particlesettings(ParticleSettings *part)
 	}
 	
 	if(local && lib==0) {
-		part->id.lib= 0;
-		part->id.flag= LIB_LOCAL;
-		new_id(&bmain->particle, (ID *)part, 0);
+		id_clear_lib_data(&bmain->particle, (ID *)part);
 		expand_local_particlesettings(part);
 	}
 	else if(local && lib) {
